# brackens_roots_old

./: Cargo.toml
bracken_engine/: Cargo.toml
bracken_engine/examples/: example_1.rs
bracken_engine/src/: lib.rs
bracken_engine/src/shipyard_core/: core_components.rs  core_systems.rs  mod.rs  render_components.rs  render_systems.rs  spatial_components.rs  tool_components.rs  tool_systems.rs
brackens_assets/: Cargo.toml  build.rs
brackens_assets/src/: asset_handle.rs  asset_storage.rs  asset_storage_generic.rs  asset_storage_single.rs  default_asset_storage.rs  default_implementations.rs  file_loading.rs  handle.rs  handle_x.rs  lib.rs  loadable_asset_storage.rs
brackens_engine/: Cargo.toml
brackens_engine/examples/: camera_example.rs  example_1.rs  hierarchy_example.rs  texture_example.rs
brackens_engine/src/: core_components.rs  core_systems.rs  lib.rs  render_components.rs  render_systems.rs  spatial_components.rs  spatial_systems.rs  spatial_tools.rs  tool_components.rs  tool_systems.rs
brackens_engine/src/assets/: mod.rs
brackens_engine/src/renderer/: components.rs  components_2d.rs  components_3d.rs  mod.rs  systems.rs  systems_2d.rs  systems_3d.rs  tools.rs  tools_2d.rs  tools_3d.rs
brackens_renderer/: Cargo.toml
brackens_renderer/src/: assets.rs  lib.rs  texture.rs  texture_renderer.rs  tools.rs
brackens_renderer/src/models/: assets.rs  mod.rs  model_renderer.rs
brackens_renderer/src/pipelines/: bind_group_templates.rs  instance_pipeline.rs  mod.rs  raw_pipeline.rs
brackens_renderer/src/renderer_2d/: assets.rs  mod.rs  renderer.rs  renderer_components.rs  texture_renderer.rs  tools.rs
brackens_renderer/src/renderer_3d/: assets.rs  mod.rs  model_renderer.rs
brackens_renderer/src/shaders/: model_shader.wgsl  texture_shader.wgsl
brackens_renderer/src/textures/: assets.rs  mod.rs  texture_renderer.rs  texture_shader.wgsl
brackens_shipyard/: Cargo.toml
brackens_shipyard/src/: assets.rs  lib.rs  main.rs  runner.rs
brackens_shipyard/src/assets/: components.rs  mod.rs  systems.rs  uniques.rs
brackens_shipyard/src/hierarchies/: components.rs  mod.rs  systems.rs  uniques.rs
brackens_shipyard/src/renderer/: components.rs  mod.rs  systems.rs  uniques.rs
brackens_shipyard/src/runner/: mod.rs  systems.rs  tools.rs  uniques.rs
brackens_shipyard/src/tools/: components.rs  mod.rs  systems.rs  uniques.rs
brackens_tools/: Cargo.toml
brackens_tools/src/: general.rs  input.rs  lib.rs  runner.rs  upkeep.rs  window.rs
brackens_tools/src/asset_manager/: asset_handle.rs  asset_storage.rs  default_implementations.rs  mod.rs
brackens_tools/src/general/: mod.rs
brackens_tools/src/renderer/: assets.rs  mod.rs  pipelines.rs  texture.rs  texture_renderer.rs  texture_shader.wgsl
