[package]
name = "brackens_roots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "brackens_tools", 
  "brackens_engine",  
  "brackens_renderer", 
  "brackens_assets",
  "brackens_shipyard",
]

[workspace.dependencies]
winit = "0.28.3"

log = "0.4.17"
glam = "0.23.0"

image = "0.24.6"
glyph_brush = "0.7.7"
anyhow = "1.0"
cfg-if = "1.0.0"

parking_lot = "0.12.1"

