[package]
name = "brackens_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
crossbeam = "0.8.2"
parking_lot = "0.12.1"

image = { workspace = true }
glyph_brush = { workspace = true }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
