[package]
name = "brackens_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["2d", "3d"]
debug = []
2d = []
3d = []

[dependencies]
brackens_tools = { path = "../brackens_tools" }
brackens_renderer = { path = "../brackens_renderer" }
brackens_assets = { path = "../brackens_assets" }

shipyard = "0.6.2"
log = "0.4.17"

