[package]
name = "brackens_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["2d", "multithreading",]
debug = ["dep:colored"]
2d = []
3d = ["2d"]
multithreading = ["dep:rayon", "dep:parking_lot"]



[dependencies]
brackens_tools = { path = "../brackens_tools" }
brackens_renderer = { path = "../brackens_renderer" }
brackens_assets = { path = "../brackens_assets" }

shipyard = "0.6.2"
log = "0.4.17"
rayon = { version = "1.7.0", optional = true }
parking_lot = { workspace = true, optional = true }
ahash = "0.8.3"

cfg-if = { workspace = true }

colored = { version = "2.0.0", optional = true }