[package]
name = "brackens_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
winit = ["dep:winit"]

[dependencies]
brackens_assets = { path = "../brackens_assets" }

wgpu = "0.16.0"
raw-window-handle = "0.5.2"

pollster = "0.3.0"
bytemuck = {version = "1.13.1", features = ["derive"]}

log = { workspace = true }
glam = { workspace = true }

anyhow = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
tobj = "4.0.0"

winit = { workspace = true, optional = true }
