[package]
name = "brackens_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.3"
wgpu = "0.15.1"

glam = "0.23.0"
image = {version = "0.24.6", features = ["png", "jpeg"]}
glyph_brush = "0.7.7"

log = "0.4.17"
env_logger = "0.10.0"

anyhow = "1.0"
pollster = "0.3.0"
bytemuck = {version = "1.13.1", features = ["derive"]}
instant = "0.1.12"
crossbeam = "0.8.2"
parking_lot = "0.12.1"
